# RomaniaNav

./: .gitignore  README.md  compile.sh  data.txt  script.js  server.cpp  style.css
backend/: compile.sh  server.cpp
data/: data.txt
frontend/: index.html  style.css
v1.5_moldova/: README.md  main.cpp  trasee_moldova.txt
v1_moldova_console/: README.md
v1_moldova_console/src/: main.cpp
v2_moldova_html/src/: main.cpp
v2_moldova_html/src/output/: moldova_routes.html
v3_moldova_react/: INSTALLATION_GUIDE.md
v3_moldova_react/backend/: CMakeLists.txt
v3_moldova_react/backend/src/: graph.cpp  graph.h  main.cpp
v3_moldova_react/frontend/: package-lock.json  package.json
v3_moldova_react/frontend/public/: index.html
v3_moldova_react/frontend/src/: App.jsx
v3_moldova_react/frontend/src/api/: backend.js
v3_moldova_react/frontend/src/components/: Controls.jsx  Map.jsx  RouteDetails.jsx  RouteList.jsx
